--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 # MySQL properties
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/timetable
+db.url=jdbc:mysql://localhost:3306/timetable?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 db.username=root
 db.password=root
 
@@ -8,3 +8,4 @@ db.password=root
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=validate
 hibernate.format_sql=true
+hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
